[project]
name = "edgewatch"
version = "0.1.0"
description = "EdgeWatch FastAPI service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "alembic>=1.16.4",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
